# ChangeLog for app-emulation/emul-linux-x86-gtklibs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/emul-linux-x86-gtklibs/ChangeLog,v 1.49 2007/11/15 07:21:38 kingtaco Exp $

  15 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  emul-linux-x86-gtklibs-20071114.ebuild:
  add info on how to fix fonts, bug 199201

*emul-linux-x86-gtklibs-20071114 (14 Nov 2007)

  14 Nov 2007; Mike Doty <kingtaco@gentoo.org>
  +emul-linux-x86-gtklibs-20071114.ebuild:
  New emul-linux-x86-* build system.  Latest x86 stable packages.

  29 Aug 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing herbs from metadata due to his retirement (see #88780 for reference).

*emul-linux-x86-gtklibs-11.0 (18 Aug 2007)

  18 Aug 2007; Olivier Crête <tester@gentoo.org>
  +emul-linux-x86-gtklibs-11.0.ebuild:
  New version of almost everything, bug #188655

  02 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  emul-linux-x86-gtklibs-2.3.ebuild, emul-linux-x86-gtklibs-2.8.8.ebuild,
  emul-linux-x86-gtklibs-2.10.6.3.ebuild,
  emul-linux-x86-gtklibs-2.10.6.3-r3.ebuild:
  (QA) RESTRICT clean up.

  05 Mar 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-gtklibs-10.0-r1.ebuild:
  fix bug 169368

  02 Mar 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-gtklibs-10.0-r1.ebuild:
  use qt3 *everywhere*

  02 Mar 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-gtklibs-10.0-r1.ebuild:
  stable on amd64; a bit preliminary as we need this in the 2007.0 release

  01 Mar 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-gtklibs-10.0-r1.ebuild:
  it's qt3, not qt

*emul-linux-x86-gtklibs-10.0-r1 (28 Feb 2007)

  28 Feb 2007; Simon Stelling <blubb@gentoo.org>
  -emul-linux-x86-gtklibs-10.0.ebuild,
  +emul-linux-x86-gtklibs-10.0-r1.ebuild:
  only depend on qtlibs if USE=qt is given

  27 Feb 2007; Simon Stelling <blubb@gentoo.org>
  emul-linux-x86-gtklibs-10.0.ebuild: