@@ -5,6 +5,7 @@ DIST cairo-1.2.4.tbz2 563844 RMD160 21109f69743722a806fc42f43bc8ef9773474c82 SHA
 DIST cairo-1.4.10.tbz2 770237 RMD160 5b616a03ab97686c4559601f01b394d8090ba1d7 SHA1 b17d9bfda0486792a7c7b75572c20fd100301636 SHA256 2bdac462985052d0f68d7b235f3d3524d0aad376e8585698e6294f77a7305746
 DIST emul-linux-x86-gtklibs-2.8.8.tar.bz2 2892105 RMD160 7bddf9725383e69519e4c70cd24750a9a806ae4f SHA1 15ab80b48fbb3e7b12ebba5fb85bef9abe4c17d5 SHA256 f48bfe53cb064e68cebb48920d8d54df7e215c6b860ec34cd56b4a27f2047b90
 DIST emul-linux-x86-gtklibs-20071114.tar.bz2 4712580 RMD160 e3e4e1b1ce19ba9498c105b12742fcf1e5c48fd7 SHA1 bde756cac46fb7a7bb4f12130e98799b1ac1d442 SHA256 4739db1544eeb9d8c12e1b924ac354750386c13e003d2ecaacb354887f23840b
+DIST emul-linux-x86-gtklibs-20071118.tar.bz2 4950478 RMD160 9728c93f2c64ed32f3f692b3d39908278ef7ca25 SHA1 9376fc6c793e88f3068e7ecfd2367794c13239cb SHA256 36f5210689330cd88ad344a995d8f14925b01ae300301bac50be56f26fe58496
 DIST gtk+-1.2.10-r12.tbz2 2255946 RMD160 2ff61d79920f22932c3f415ec572df0727dea0d7 SHA1 dd7b9011a6e52d6c99ddb2fad0b865ac48580f73 SHA256 aad23e5f92b9f2245654f4d120cd56d6e761a208bed55ced597f03939e3556bc
 DIST gtk+-2.10.13.tbz2 7680158 RMD160 f7063e6c3cea0664e7480e26581557fc7d85244e SHA1 92fe0edfdb34f75ab27689c201493a73c264b13b SHA256 fdb72e1ad558298467ab9ff8b417bc016f029eb8906b2052ca34ba2dc1474ada
 DIST gtk+-2.10.6.tbz2 7455485 RMD160 95bb8883cefca38611ea3a89c2585306e918eeaf SHA1 1ee2452a78774839fa49bcc4be764e30b211d909 SHA256 035451318af88820d86a70b09530638928b42dfd0bbd1ae38383231c90653508
@@ -20,5 +21,6 @@ EBUILD emul-linux-x86-gtklibs-10.0-r1.ebuild 2250 RMD160 d12a1c083fbe44f8af7358b
 EBUILD emul-linux-x86-gtklibs-11.0.ebuild 2251 RMD160 377a80367ba478f1f50a94bb3a0c68e9edb3ec73 SHA1 3459bf5ac44406196b01a92684493524f1c8eb7c SHA256 f871f25c6b1b8c338a3aa1c215857d5638f1cfb25064e48064b920b2e9bc56a7
 EBUILD emul-linux-x86-gtklibs-2.8.8.ebuild 1065 RMD160 7d78b15932c04edd8a582a7e984b0f552369dd94 SHA1 ff9da6b81dda457b2869f62842adee7a0c28a1da SHA256 01e52fe618d5a41a915feee9d6af905069615cf0a5b5601039834a1a7cd203cd
 EBUILD emul-linux-x86-gtklibs-20071114.ebuild 1838 RMD160 aa95ba18c0d2723c51f61ee4ca0f6856c2cea63e SHA1 74904fbfa28a1c87d1ff0d218d07272b1b6bfa0c SHA256 ad284f0cb499ef7410affa32cc8a91bea6234e92f03933b44ee77dbedc57f215
-MISC ChangeLog 8698 RMD160 e40e9f6b31c8eca28a8fde24500905d11d2421d9 SHA1 3e1af9a4e9150444e80912fba37185a56ca6d928 SHA256 337fc7cc8239a4e80320ab3bac8c72942684f6d5864adad1e9ed74f4c1eab161
+EBUILD emul-linux-x86-gtklibs-20071118.ebuild 1838 RMD160 ad58bff538e10169647368ba0836c489d64caf33 SHA1 ca24cca755a70294464a0932cf7552d5802ee9a8 SHA256 ae7c7e5ffc8893f188b45a551a64c9543b5201d48a7d8ea903bf7281d84b8719
+MISC ChangeLog 8889 RMD160 f773df20dbaef3cedc89c744d2b5d7ab93335c77 SHA1 da8b5bbc29df86b65b589f3bb84d4e5cf5f9b314 SHA256 9c4119df1d97b595b22b37d935a1a49f59f8be723b26a39dd83f581b34863a5d
 MISC metadata.xml 226 RMD160 8b5e8dfb5cb187694ac54de32e888f915617761d SHA1 1cf50e178ffc19ba9c83c1440bb7affa225058a0 SHA256 ec696441bfd66c7ba1bd8f257fb8b28eebd35325a99a861becdcce4ab22fcb78
